Select Columns button styling

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -54,6 +54,8 @@ html, body {
 #column_select {
     position: relative;
     float: right;
+    background-color: #002F5D;
+    color: #FFFFFF;
 }
 
 #column_select_window {
