--- a/public_html/style.css
+++ b/public_html/style.css
@@ -1,8 +1,13 @@
+:root {
+	/*Main background color*/
+	--background-color: #FFFFFF;
+}
+
 html,
 body {
 	-ms-overflow-style: -ms-autohiding-scrollbar;
 	margin: 0; padding: 0;
-	background-color: #ffffff;
+	background-color: var(--background-color);
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 10pt; overflow: hidden; height: 100%;
 }
@@ -16,7 +21,7 @@ body {
 	position: absolute;
 	bottom: 0;
 	margin: 0;
-	background: #ffffff;
+	background: var(--background-color);
 	width: 100%;
 	height: 400px;
 }
@@ -152,7 +157,7 @@ body {
 	font-size: 75%;
 	text-decoration: underline;
 	cursor: pointer;
-	background: #fff;
+	background: var(--background-color);
 	padding: 3px;
 	border-radius: 2px;
 }
@@ -252,7 +257,7 @@ div#loader {
 
 .aircraft_table_header { 
 	background-color: #002F5D;
-	color: #FFFFFF;
+	color: var(--background-color);
 	cursor: pointer;
 }
 
@@ -337,7 +342,7 @@ div#loader {
 .sidebarButton {
 	background-color: #409EDF;
 	padding: 4px 15px 4px 15px;
-	color: #FFFFFF;
+	color: var(--background-color);
 	font-weight: normal;
 	font-size: small;
 }
@@ -481,7 +486,7 @@ input.error {
 }
 
 .flightawareLogo {
-	background-color: #FFF;
+	background-color: var(--background-color);
 	padding-top: 7px;
 	padding-bottom: 6px;
 	padding-left: 20px;
@@ -568,7 +573,7 @@ input.error {
 	top: 60px;
 	min-width: 168px;
 	padding-right: 5px;
-	background: #ffffff;
+	background: var(--background-color);
 	box-shadow: 4px 4px 10px #444444;
 	cursor: pointer;
 	z-index: 9999;
@@ -709,7 +714,7 @@ input.error {
 	top: 60px;
 	width: 398px;
 	min-height: 180px;
-	background: #ffffff;
+	background: var(--background-color);
 	box-shadow: 4px 4px 10px #444444;
 	padding: 20px;
 	z-index: 9999;
