--- a/public_html/style.css
+++ b/public_html/style.css
@@ -1,6 +1,9 @@
 :root {
-	/*Main background color*/
+	/* Main background color */
 	--background-color: #FFFFFF;
+	
+	/* Primary color */
+	--primary-color: #002F5D;
 }
 
 html,
@@ -256,7 +259,7 @@ div#loader {
 }
 
 .aircraft_table_header { 
-	background-color: #002F5D;
+	background-color: var(--primary-color);
 	color: var(--background-color);
 	cursor: pointer;
 }
@@ -326,7 +329,7 @@ div#loader {
 
 .infoblock_heading a {
 	text-decoration: none;
-	color: blue;
+	color: var(--primary-color);
 	font-size: x-small;
 }
 
@@ -410,7 +413,7 @@ input.error {
 	font-size: 12px;
 	font-weight: bold;
 	line-height: 16px;
-	color: #002F5D;
+	color: var(--primary-color);
 }
 
 .infoHeading sub {
@@ -428,7 +431,7 @@ input.error {
 	width: 100%;
 	text-transform: uppercase;
 	color: #fff;
-	background: #002F5D;
+	background: var(--primary-color);
 	font-size: 14px;
 }
 
@@ -451,7 +454,7 @@ input.error {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 14px;
 	line-height: 20px;
-	color: #002F5D;
+	color: var(--primary-color);
 	color: rgb(0, 47, 93);
 }
 
@@ -475,11 +478,11 @@ input.error {
 #header {
 	width: 100%;
 	height: 60px;
-	background: #002F5D;
+	background: var(--primary-color);
 	background: -webkit-linear-gradient(#002F5D, #002F5D 60%, #021624);
 	background: -moz-linear-gradient(#002F5D, #002F5D 60%, #021624);
 	background: -ms-linear-gradient(#002F5D, #002F5D 60%, #021624);
-	background: linear-gradient(#002F5D, #002F5D 60%, #021624);
+	background: linear-gradient(var(--primary-color), var(--primary-color 60%), #021624);
 	display: flex;
 	box-shadow: -6px 0px 8px #999999;
 	z-index: 99999;
@@ -595,7 +598,7 @@ input.error {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 24px;
 	line-height: 20px;
-	color: #002F5D;
+	color: var(--primary-color);
 	color: rgb(0, 47, 93);
 	font-weight: lighter;
 }
@@ -673,7 +676,7 @@ input.error {
 
 .infoBlockTitleText {
 	font-weight: bold;
-	color: #002F5D;
+	color: var(--primary-color);
 }
 
 .legendBox {
@@ -812,7 +815,7 @@ input.error {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	text-align: center;
-	color: #002F5D;
+	color: var(--primary-color);
 	line-height: 18px;
 }
 
@@ -826,7 +829,7 @@ input.error {
 }
 
 .selected_airframe a {
-	color: #002F5D;
+	color: var(--primary-color);
 }
 
 .infoblock-container-small .infoRowFluid {
