--- a/public_html/style.css
+++ b/public_html/style.css
@@ -5,8 +5,9 @@
 	/* Primary color */
 	--primary-color: #002F5D;
 
-	/* Text color */
-	--text-color: #000000;
+	/* Text colors */
+	--text-color-primary: #000000;
+	--text-color-secondary: #FFFFFF;
 }
 
 html,
@@ -404,7 +405,7 @@ input.error {
 	font-size: 14px;
 	line-height: 18px;
 	color: #FFFFFF;
-	color: rgb(255, 255, 255);
+	color: var(--text-color-secondary);
 	line-height: 60px;
 	text-align: right;
 	display: inline-block;
@@ -427,7 +428,7 @@ input.error {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 12px;
 	line-height: 16px;
-	color: var(--text-color)000;
+	color: var(--text-color-primary);
 }
 
 .sectionTitle {
@@ -446,7 +447,7 @@ input.error {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	width: 100%;
 	font-size: 12px;
-	color: var(--text-color)000;
+	color: var(--text-color);
 	color: rgb(0, 0, 0);
 	display: inline-flex;
 	justify-content: flex-end;
