--- a/public_html/style.css
+++ b/public_html/style.css
@@ -264,7 +264,7 @@ div#loader {
 
 .aircraft_table_header { 
 	background-color: var(--primary-color);
-	color: var(--background-color);
+	color: var(--text-color-secondary);
 	cursor: pointer;
 }
 
@@ -532,8 +532,7 @@ input.error {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: bold;
 	font-size: 12px;
-	color: #FFFFFF;
-	color: rgb(255, 255, 255);
+	color: var(--text-color-secondary);
 	line-height: 28px;
 	padding-left: 10px;
 	padding-right: 10px;
