--- a/public_html/style.css
+++ b/public_html/style.css
@@ -53,6 +53,7 @@ body {
 	left: 0 !important;
 	height: 100%;
 	border-left: 1px solid var(--primary-color);
+	color: var(--text-color-primary);
 }
 
 #map_container {
