--- a/public_html/style.css
+++ b/public_html/style.css
@@ -722,7 +722,8 @@ input.error {
 	width: 398px;
 	min-height: 180px;
 	background: var(--background-color);
-	box-shadow: 4px 4px 10px #444444;
+	border: 1px solid var(--border-color);
+	border-top: none;
 	padding: 20px;
 	z-index: 9999;
 	display: none;
