--- a/public_html/style.css
+++ b/public_html/style.css
@@ -723,6 +723,7 @@ input.error {
 	min-height: 180px;
 	background: var(--background-color);
 	border: 1px solid var(--border-color);
+	border-right: none;
 	border-top: none;
 	padding: 20px;
 	z-index: 9999;
