--- a/public_html/style.css
+++ b/public_html/style.css
@@ -13,6 +13,7 @@
 	/* Various */
 	--border-color: #7F7F7F;
 	--checkbox-color-checked: #00a0e2;
+	--text-color-planelist: #000000;
 }
 
 html,
@@ -55,7 +56,7 @@ body {
 	left: 0 !important;
 	height: 100%;
 	border-left: 1px solid var(--primary-color);
-	color: var(--text-color-primary);
+	color: var(--text-color-planelist);
 }
 
 #map_container {
