--- a/public_html/style.css
+++ b/public_html/style.css
@@ -462,7 +462,7 @@ input.error {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	width: 100%;
 	font-size: 12px;
-	color: var(--text-color);
+	color: var(--text-color-primary);
 	display: inline-flex;
 	justify-content: flex-end;
 	padding-top: 10px;
